# calcurse-load

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
calcurse_load/: __main__.py  calcurse.py  log.py  parse.py
calcurse_load/ext/: all.py  from_json.py  gcal.py  todotxt.py  utils.py
gcal_index/: __main__.py
